Make "Tile" consistent

--- a/campaigns/inferno_deal_with_the_devil.tex
+++ b/campaigns/inferno_deal_with_the_devil.tex
@@ -144,7 +144,7 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
 
 \textbf{\nth{7} Round:}
 \begin{itemize}
-  \item The Enemy Castle Charging Hero \#2 appears on the Settlement Field of the F3 tile or on the center Field of S3 Starting Map Tile (your choice).
+  \item The Enemy Castle Charging Hero \#2 appears on the Settlement Field of the F3 Tile or on the center Field of S3 Starting Map Tile (your choice).
   \item The Enemy Rampart Charging Hero \#2 appears on the center Field of the S4 Starting Map Tile.
 \end{itemize}
 
@@ -156,7 +156,7 @@ Clan Kreelah fails to defend Klessive against the Enemy Charging Heros attemptin
 
 \textbf{\nth{12} Round:}
 \begin{itemize}
-  \item The Final Charging Enemy Army appears on the Settlement Field of the F3 tile. This army has 4 MPs per Turn.
+  \item The Final Charging Enemy Army appears on the Settlement Field of the F3 Tile. This army has 4 MPs per Turn.
 \end{itemize}
 
 \textbf{\nth{16} Round:}
@@ -177,17 +177,17 @@ During this ``Inferno'' Campaign Scenario, the following rules apply:
   \item Your Main Hero can only travel in Inferno Map Tiles. You cannot enter any other Map Tile type.
   \item You cannot attack Enemy Charging Heroes. You can only defend against them while inside of Kleesive.
   \item Gain 3 \svg{gold} when you defeat a Charging Hero's Army.
-  \item If an Enemy Charging Hero enters a map tile or Field that your Main Hero is on (exception is if you are in
+  \item If an Enemy Charging Hero enters a Map Tile or Field that your Main Hero is on (exception is if you are in
     your Inferno city Kleesive), or if a charging Hero attacks Kleesive and you are not present in your city
     of Kleesive, you are immediately transported back to Kleesive, you lose any remaining Movement Points
     you have, lose 3 \svg{gold}, gain \svg{morale_negative}, and randomly discard 1 card from your hand.
   \item Enemy Charging Heroes move only 2 MPs. The Final Charging Army moves 4 MPs. They take the shortest
-    route to Kleesive. If you own a Mine in a map tile they enter, they will capture the Mine (but will not
+    route to Kleesive. If you own a Mine in a Map Tile they enter, they will capture the Mine (but will not
     ``backtrack'' to do so), and then continue along the shortest route to Kleesive. They ignore everything
     else. They also make use of Stables 1 MP bonus.
   \item Enemy Charging Heros always move amongst each to not ``block'' each other's paths (thus slowing each
     other down). The Enemy Charging Hero that can get closest to Kleesive will move before any others.
-  \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno map tiles). Place enemy
+  \item Castle and Rampart already have all Mines controlled in their territory (non-Inferno Map Tiles). Place enemy
     cubes on all of their Mines.
   \item Your Walls, Gates, and Arrow Tower in Kleesive are completely rebuilt after each battle.
   \item Enemy \svg{unit_flying} Units will fly over Walls and Gates to attack your Units whenever possible.
