--- a/clash/bloody_grail.tex
+++ b/clash/bloody_grail.tex
@@ -50,7 +50,7 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
   \item 1 × Center (VI--VII) Map Tile, which must contain the Grail Field
 \end{itemize}
 
-\textbf{\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.
+\textbf{\MakeUppercase{Note:}} Before placing the Near Tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the Tiles with an Obelisk are not placed adjacent to each other.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 To win the Scenario, a Hero must obtain the Grail Token and bring it to their Faction Town.
@@ -73,7 +73,7 @@ If the Grail Token has been obtained, the players gain additional time (until th
 Before this Scenario:
 
 \begin{itemize}
-  \item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far tiles, Minor or Major Artifacts on Near tiles, and Major or Relic Artifacts on Center tiles.
+  \item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far Tiles, Minor or Major Artifacts on Near Tiles, and Major or Relic Artifacts on Center Tiles.
 \end{itemize}
 
 During this Scenario:
