--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -30,7 +30,7 @@ This Scenario is played over 8 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling
 
-\textbf{Map Tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.
+\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.
 
 \textbf{Additional Bonus:} None
 
@@ -41,14 +41,14 @@ Take the following Map Tiles and arrange them as shown in the Scenario map layou
 $\boldsymbol{P}$ \textbf{× Starting (I) Map Tile}
 \begin{itemize}
   \item Starting Tiles of your chosen Factions.
-  \item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)
+  \item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III)
 \end{itemize}
 
 $\boldsymbol{4 P}$ \textbf{× Far (II--III) Map Tile}
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a Level III fight.)
+Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
