--- a/coops/sentinels.tex
+++ b/coops/sentinels.tex
@@ -32,7 +32,7 @@ This Scenario is played over 12 Rounds.
 
 \textbf{Town Buildings:} \svgunit{bronze} Dwelling, Citadel
 
-\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These tiles should not contain any Obelisks.
+\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.
 
 \textbf{Additional Bonus:} Search (2) the Artifact Deck
 
@@ -113,7 +113,7 @@ One of your Towns is captured, or a Main Hero is defeated in a battle (retreat d
   \end{itemize}
   \item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.
   Rounds 8 and 10 are entirely random.
-  \item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
+  \item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.
   \item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.
   \item Enemy armies move at the end of every Turn, starting with the Turn they spawned.
   \item Enemy armies have 3 MPs per Round.
