--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -53,12 +53,12 @@ $\boldsymbol{2 P}$ \textbf{× Near (IV--V) Map Tile}
 
 $\boldsymbol{(P + 1)}$ \textbf{× Center (VI--VII) Map Tile}
 
-If you don't have enough VI--VII tiles, you can use another tile near to tile I.
-The center of this tile is the Titans' Stronghold.
+If you don't have enough VI--VII Tiles, you can use another Tile near Tile I.
+The center of this Tile is the Titans' Stronghold.
 
 \subsection*{\MakeUppercase{Victory Conditions}}
 
-Kill all Units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).
+Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).
 
 \subsection*{\MakeUppercase{Defeat Conditions}}
 
@@ -75,7 +75,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 
 \subsection*{\MakeUppercase{Additional Rules}}
 \begin{itemize}
-  \item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.
+  \item Remember: the center of VI--VII Tile next to all I Tiles is the Titans' Stronghold.
   \item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.
   \item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):
     \begin{itemize}
@@ -85,7 +85,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
     \end{itemize}
   Then, flag the VII Field with a Faction cube.
   (There is no bonus in solo play!)
-  \item Ignore all yellow borders in I tiles.
+  \item Ignore all yellow borders in I Tiles.
   \item You can use your build Token to give your resources to another player.
   \item Two players can use their build Tokens to exchange Artifacts and/or Spells.
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
