--- a/translations/titans_stronghold.tex/pl.po
+++ b/translations/titans_stronghold.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:35+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -312,22 +312,22 @@ msgstr ""
 #: coops/titans_stronghold.tex:58
 #, no-wrap
 msgid ""
-"If you don't have enough VI--VII tiles, you can use another tile near to tile I.\n"
-"The center of this tile is the Titans' Stronghold.\n"
+"If you don't have enough VI--VII Tiles, you can use another Tile near Tile I.\n"
+"The center of this Tile is the Titans' Stronghold.\n"
 "\n"
 msgstr ""
-"Jeśli nie masz wystarczającej liczby kafelków VI--VII, możesz użyć innego kafelka blisko kafelka I.\n"
-"Centrum tego kafelka to Twierdza Tytanów.\n"
+"Jeśli nie masz wystarczającej liczby Kafelków VI--VII, możesz użyć innego Kafelka blisko Kafelka I.\n"
+"Centrum tego Kafelka to Twierdza Tytanów.\n"
 "\n"
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:62
 #, no-wrap
 msgid ""
-"Kill all Units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).\n"
+"Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
-"Zabij wszystkie Jednostki w Twierdzy Tytanów (centrum kafelka VI--VII obok kafelków I).\n"
+"Zabij wszystkie Jednostki w Twierdzy Tytanów (centrum Kafelka VI--VII obok Kafelków I).\n"
 "\n"
 
 #. type: multicols*
@@ -370,7 +370,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
-"  \\item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.\n"
+"  \\item Remember: the center of VI--VII Tile next to all I Tiles is the Titans' Stronghold.\n"
 "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
 "  \\item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
 "    \\begin{itemize}\n"
@@ -380,7 +380,7 @@ msgid ""
 "    \\end{itemize}\n"
 "  Then, flag the VII Field with a Faction cube.\n"
 "  (There is no bonus in solo play!)\n"
-"  \\item Ignore all yellow borders in I tiles.\n"
+"  \\item Ignore all yellow borders on Starting Tiles I.\n"
 "  \\item You can use your build Token to give your resources to another player.\n"
 "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
 "  \\item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.\n"
@@ -397,7 +397,7 @@ msgid ""
 msgstr ""
 "\\subsection*{\\MakeUppercase{Dodatkowe Zasady}}\n"
 "\\begin{itemize}\n"
-"  \\item Pamiętaj: centrum kafelka VI--VII obok wszystkich startowych to Twierdza Tytanów.\n"
+"  \\item Pamiętaj: centrum Kafelka VI--VII obok wszystkich startowych to Twierdza Tytanów.\n"
 "  \\item Nie można wejść do Twierdzy Tytanów, dopóki wszystkie inne Pola VII nie zostaną oflagowane przez dowolnego gracza.\n"
 "  \\item Po pokonaniu neutralnej armii poziomu VII, zamiast rozpatrywać Pole, gracz wybiera trzykrotnie jedną opcję z poniższej listy (opcję można wybrać wielokrotnie):\n"
 "  \\begin{itemize}[leftmargin=12pt]\n"
@@ -407,7 +407,7 @@ msgstr ""
 "  \\end{itemize}\n"
 "  Następnie, oflaguj Pole VII kostką Frakcji.\n"
 "  (W grze solo nie ma bonusu!)\n"
-"  \\item Zignoruj żółte granice na kafelkach I.\n"
+"  \\item Zignoruj żółte granice na Kafelkach I.\n"
 "  \\item Możesz użyć swojego żetonu budowy, aby przekazać swoje zasoby innemu graczowi.\n"
 "  \\item Dwóch graczy może użyć swoich żetonów budowy do wymiany artefaktów i/lub Zaklęć.\n"
 "  \\item Za każdym razem, gdy gracz odwiedza Obelisk, ten gracz rzuca jedną Kością skarbu i jedną Kością zasobu, i rozpatruje jedną z nich.\n"
