--- a/translations/bloody_grail.tex/cs.po
+++ b/translations/bloody_grail.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:15+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:13+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -277,9 +277,12 @@ msgstr ""
 
 #. type: multicols*
 #: clash/bloody_grail.tex:54
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{\\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.\n"
+#| "\n"
 msgid ""
-"\\textbf{\\MakeUppercase{Note:}} Before placing the Near tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the tiles with an Obelisk are not placed adjacent to each other.\n"
+"\\textbf{\\MakeUppercase{Note:}} Before placing the Near Tiles, separate them into 2 piles (with and without an Obelisk). Place them alternately so that the Tiles with an Obelisk are not placed adjacent to each other.\n"
 "\n"
 msgstr ""
 "\\textbf{\\MakeUppercase{Poznámka:}} Před umístěním Blízkých Dílků je rozdělte do 2 hromádek (s Obeliskem a bez Obelisku). Umísťujte je střídavě tak, aby dílky s Obeliskem nebyly umístěny vedle sebe.\n"
@@ -376,7 +379,7 @@ msgstr ""
 #| "\n"
 msgid ""
 "\\begin{itemize}\n"
-"  \\item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far tiles, Minor or Major Artifacts on Near tiles, and Major or Relic Artifacts on Center tiles.\n"
+"  \\item Split the Artifact Deck by rarity into 3 separate Decks (Minor, Major, and Relic). A player may gain only Minor Artifacts on Starting or Far Tiles, Minor or Major Artifacts on Near Tiles, and Major or Relic Artifacts on Center Tiles.\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
