--- a/translations/emerald_island.tex/cs.po
+++ b/translations/emerald_island.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:35+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -248,7 +248,7 @@ msgstr ""
 #| "\\textbf{Map tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
 #| "\n"
 msgid ""
-"\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III tiles equally to each player rather than laying them out as proposed.\n"
+"\\textbf{Map Tile Pool:} If you wish, you can distribute the II--III Tiles equally to each player rather than laying them out as proposed.\n"
 "\n"
 msgstr ""
 "\\textbf{Dílky Mapy na ruce:} Pokud si přejete, můžete dílky II--III rozdělit rovnoměrně mezi každého hráče, místo aby byly rozmístěny podle návrhu ve scénáři.\n"
@@ -268,7 +268,7 @@ msgid ""
 "$\\boldsymbol{P}$ \\textbf{× Starting (I) Map Tile}\n"
 "\\begin{itemize}\n"
 "  \\item Starting Tiles of your chosen Factions.\n"
-"  \\item Ignore any yellow lines between tiles I (but not between tiles I and tiles II--III)\n"
+"  \\item Ignore any yellow lines between Tiles I (but not between Tiles I and Tiles II--III)\n"
 "\\end{itemize}\n"
 "\n"
 msgstr ""
@@ -299,7 +299,7 @@ msgstr ""
 #| "Flag all Mines and Settlements. (Don't forget the building materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a level III fight.)\n"
 #| "\n"
 msgid ""
-"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in tile I. Each tile II--III contains one Mine or Settlement with a Level III fight.)\n"
+"Flag all Mines and Settlements. (Don't forget the Building Materials Mine in Tile I. Each Tile II--III contains one Mine or Settlement with a Level III fight.)\n"
 "\n"
 msgstr ""
 "Obsaďte všechny Doly a Osady. (Nezapomeňte na Důl na Stavební Materiály na dílku I. Každý dílek II--III obsahuje jeden Důl nebo Osadu s bojem na úrovni III.)\n"
