--- a/translations/sentinels.tex/pl.po
+++ b/translations/sentinels.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:35+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -174,10 +174,10 @@ msgstr ""
 #: coops/sentinels.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These tiles should not contain any Obelisks.\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
-"\\textbf{Pula Kafelków Mapy:} Każdy gracz losuje 1 Bliski (IV--V) Kafelek Mapy i 1 Daleki (II--III) Kafelek Mapy. Te kafelki nie powinny zawierać żadnych Obelisków.\n"
+"\\textbf{Pula Kafelków Mapy:} Każdy gracz losuje 1 Bliski (IV--V) Kafelek Mapy i 1 Daleki (II--III) Kafelek Mapy. Te Kafelki nie powinny zawierać żadnych Obelisków.\n"
 "\n"
 
 #. type: multicols
@@ -458,7 +458,7 @@ msgid ""
 "  \\end{itemize}\n"
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
-"  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
+"  \\item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies have 3 MPs per Round.\n"
@@ -479,7 +479,7 @@ msgstr ""
 "  \\end{itemize}\n"
 "  \\item Dla bardziej zbilansowanej dystrybucji, w Rundach 7. i 9., rzuć tylko drugą Kością Ataku (K2). Dla K1, przyjmij przeciwny wynik do tego, który wypadł w poprzedniej Rundzie.\n"
 "  Rundy 8. i 10. są całkowicie losowe.\n"
-"  \\item Jeśli Pole, na którym ma pojawić się wróg, nie zostało jeszcze odkryte, odwróć je i obróć według własnego uznania.\n"
+"  \\item Jeśli Kafelek, na którym ma pojawić się wróg, nie został jeszcze odkryty, odwróć go i obróć według własnego uznania.\n"
 "  \\item Jeśli na Polu, na którym pojawia się wróg, znajduje się Bohater, natychmiast rozpoczyna się Walka.\n"
 "  \\item Wrogie armie ruszają się na końcu każdej tury, zaczynając od tury, w której się pojawiły.\n"
 "  \\item Wrogie armie mają 3 Punkty Ruchu na Rundę.\n"
