--- a/translations/sentinels.tex/sentinels.tex.pot
+++ b/translations/sentinels.tex/sentinels.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-22 18:35+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -143,7 +143,7 @@ msgstr ""
 #: coops/sentinels.tex:36
 #, no-wrap
 msgid ""
-"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These tiles should not contain any Obelisks.\n"
+"\\textbf{Map Tile Pool:} Each player takes 1 random Near (IV--V) Map Tile and 1 random Far (II--III) Map Tile. These Tiles should not contain any Obelisks.\n"
 "\n"
 msgstr ""
 
@@ -361,7 +361,7 @@ msgid ""
 "  \\end{itemize}\n"
 "  \\item For a more balanced distribution, in Rounds 7 and 9, only roll the second Attack Die (D2). For D1, take the opposite result from what was rolled in the previous Round.\n"
 "  Rounds 8 and 10 are entirely random.\n"
-"  \\item If the tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
+"  \\item If the Tile where an enemy is to spawn hasn't been discovered yet, flip it over and orient it as preferred.\n"
 "  \\item If there is a Hero on the Field where the enemy spawns, a fight starts immediately.\n"
 "  \\item Enemy armies move at the end of every Turn, starting with the Turn they spawned.\n"
 "  \\item Enemy armies have 3 MPs per Round.\n"
