--- a/translations/titans_stronghold.tex/cs.po
+++ b/translations/titans_stronghold.tex/cs.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-08-22 18:35+0200\n"
+"POT-Creation-Date: 2024-08-22 23:28+0200\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -332,10 +332,14 @@ msgstr ""
 
 #. type: multicols*
 #: coops/titans_stronghold.tex:58
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "If you don't have enough VI--VII tiles, you can use another tile near to tile I.\n"
+#| "The center of this tile is the Titans' Stronghold.\n"
+#| "\n"
 msgid ""
-"If you don't have enough VI--VII tiles, you can use another tile near to tile I.\n"
-"The center of this tile is the Titans' Stronghold.\n"
+"If you don't have enough VI--VII Tiles, you can use another Tile near Tile I.\n"
+"The center of this Tile is the Titans' Stronghold.\n"
 "\n"
 msgstr ""
 "Pokud nemáte dostatek dílků VI--VII, můžete použít jiný dílek blízko dílku I.\n"
@@ -349,7 +353,7 @@ msgstr ""
 #| "Kill all units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).\n"
 #| "\n"
 msgid ""
-"Kill all Units in the Titans' Stronghold (the center of tile VI--VII next to tiles I).\n"
+"Kill all Units in the Titans' Stronghold (the center of Tile VI--VII next to Tiles I).\n"
 "\n"
 msgstr ""
 "Zabijte všechny jednotky v Pevnosti Titánů (střed dílku VI--VII vedle dílků I).\n"
@@ -425,7 +429,7 @@ msgstr ""
 msgid ""
 "\\subsection*{\\MakeUppercase{Additional Rules}}\n"
 "\\begin{itemize}\n"
-"  \\item Remember: the center of VI--VII tile next to all I tiles is the Titans' Stronghold.\n"
+"  \\item Remember: the center of VI--VII Tile next to all I Tiles is the Titans' Stronghold.\n"
 "  \\item No one can enter the Titans' Stronghold until all other VII Fields are flagged by any player.\n"
 "  \\item After defeating a Level VII Neutral army, instead of resolving the Field, the player chooses an option three times from the following list (an option may be chosen multiple times):\n"
 "    \\begin{itemize}\n"
@@ -435,7 +439,7 @@ msgid ""
 "    \\end{itemize}\n"
 "  Then, flag the VII Field with a Faction cube.\n"
 "  (There is no bonus in solo play!)\n"
-"  \\item Ignore all yellow borders in I tiles.\n"
+"  \\item Ignore all yellow borders in I Tiles.\n"
 "  \\item You can use your build Token to give your resources to another player.\n"
 "  \\item Two players can use their build Tokens to exchange Artifacts and/or Spells.\n"
 "  \\item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.\n"
