Make map layout captions consistent

--- a/coops/emerald_island.tex
+++ b/coops/emerald_island.tex
@@ -86,16 +86,16 @@ There are unflagged Mines or Settlements left in map at the end of Round 8.
 
 \begin{center}
   \includegraphics[width=0.2\paperwidth]{\maps/emerald-1.png}
-  \captionof{figure}{1-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{1-PLAYER SCENARIO}}
   \vspace{3em}
   \includegraphics[width=0.3\paperwidth]{\maps/emerald-2.png}
-  \captionof{figure}{2-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
   \vspace{3em}
   \includegraphics[width=0.3\paperwidth]{\maps/emerald-3.png}
-  \captionof{figure}{3-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
   \vspace{3em}
   \includegraphics[width=0.3\paperwidth]{\maps/emerald-4.png}
-  \captionof{figure}{4-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
 \end{center}
 
 \end{multicols*}
