--- a/coops/titans_stronghold.tex
+++ b/coops/titans_stronghold.tex
@@ -85,7 +85,7 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
     \end{itemize}
   Then, flag the VII Field with a Faction cube.
   (There is no bonus in solo play!)
-  \item Ignore all yellow borders in I Tiles.
+  \item Ignore all yellow borders on Starting Tiles I.
   \item You can use your build Token to give your resources to another player.
   \item Two players can use their build Tokens to exchange Artifacts and/or Spells.
   \item Whenever a player Visits an Obelisk, that player rolls one treasure Die and one resource Die, and resolves one of them.
@@ -193,34 +193,34 @@ There are undefeated Units left in the Titans' Stronghold at the end of Round 16
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.18\paperwidth]{\maps/titans-1.png}
-  \captionof{figure}{1-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{1-PLAYER SCENARIO}}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.36\paperwidth]{\maps/titans-2.png}
-  \captionof{figure}{2-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{2-PLAYER SCENARIO}}
 \end{minipage}
 \vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\maps/titans-3.png}
-  \captionof{figure}{3-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{3-PLAYER SCENARIO}}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\maps/titans-4.png}
-  \captionof{figure}{4-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{4-PLAYER SCENARIO}}
 \end{minipage}
 \vspace{1em}
 \linebreak
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\maps/titans-5.png}
-  \captionof{figure}{5-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{5-PLAYER SCENARIO}}
 \end{minipage}
 \begin{minipage}{0.4\paperwidth}
   \centering
   \includegraphics[width=0.38\paperwidth]{\maps/titans-6.png}
-  \captionof{figure}{6-PLAYER SCENARIO}
+  \captionof{figure}{\textbf{6-PLAYER SCENARIO}}
 \end{minipage}
