--- a/translations/the_hunt.tex/pl.po
+++ b/translations/the_hunt.tex/pl.po
@@ -390,9 +390,9 @@ msgstr ""
 "\\begin{tikzpicture}[overlay]\n"
 "  \\centering\n"
 "  \\node at (14, 10) {\\includegraphics[scale=0.187]{\\maps/the-hunt-2.png}};\n"
-"  \\node at (14, 4) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ DWUOSOBOWY}}}};\n"
+"  \\node at (14, 4) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ 2-OSOBOWY}}}};\n"
 "  \\node at (11, -3.5) {\\includegraphics[scale=0.187]{\\maps/the-hunt-3.png}};\n"
-"  \\node at (4, -2.5) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ TRZYOSOBOWY}}}};\n"
+"  \\node at (4, -2.5) {\\footnotesize{\\textbf{\\MakeUppercase{SCENARIUSZ 3-OSOBOWY}}}};\n"
 "\\end{tikzpicture}\n"
 "\n"
 
