--- a/translations/emerald_island.tex/emerald_island.tex.pot
+++ b/translations/emerald_island.tex/emerald_island.tex.pot
@@ -7,7 +7,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2024-08-22 23:28+0200\n"
+"POT-Creation-Date: 2024-08-22 23:44+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -289,16 +289,16 @@ msgstr ""
 msgid ""
 "\\begin{center}\n"
 "  \\includegraphics[width=0.2\\paperwidth]{\\maps/emerald-1.png}\n"
-"  \\captionof{figure}{1-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{1-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-2.png}\n"
-"  \\captionof{figure}{2-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{2-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-3.png}\n"
-"  \\captionof{figure}{3-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{3-PLAYER SCENARIO}}\n"
 "  \\vspace{3em}\n"
 "  \\includegraphics[width=0.3\\paperwidth]{\\maps/emerald-4.png}\n"
-"  \\captionof{figure}{4-PLAYER SCENARIO}\n"
+"  \\captionof{figure}{\\textbf{4-PLAYER SCENARIO}}\n"
 "\\end{center}\n"
 "\n"
 msgstr ""
